# high-concurrency-logistics-engine

./: .dockerignore  .env.example  .getattributes  .gitattributes  .gitignore  ARCHITECTURE.md  CLUSTERLOADTEST.md  Cargo.toml  DECISIONS.md  GKE.md  INSTRUCTIONS.md  LICENSE  LOADTEST.md  MISTAKES.md  README.md  SINGLELOADTEST.md  TLS.md  dashboard.json  docker-compose.yaml  mTLS.md  main.tf  nginx.conf  prometheus.yml  test.tf  variables.tf
.github/workflows/: ci.yaml  ci.yml
assets/grafana_links/: links.md
axum-api/: Cargo.toml  Dockerfile
axum-api/.sqlx/: query-11a82cdccedc147f08a1322796b7d8b656190fd836821bd78ccd6c32fd9fcb30.json  query-881e3ec510c4d3560e7cbad60c0456a72cb1518936af5a7b03cdaa0f551759e7.json
axum-api/migrations/: 20260413191311_parcel_history.sql  20260413192148_users.sql
axum-api/src/: lib.rs  main.rs
axum-api/src/bus/: email_bus.rs  mod.rs  postgres_bus.rs  postresql_bus.rs  redis_bus.rs
axum-api/src/components/: background.rs  batch_postgres.rs  mod.rs  password.rs  redis_read_background.rs  setup_redis.rs
axum-api/src/handlers/: customer.rs  login.rs  mod.rs  parcel.rs  parcel_duration.rs  register.rs  verify.rs  ws.rs
axum-api/src/middlewares/: auth.rs
axum-api/src/models/: error.rs  location_user.rs  login_user.rs  mod.rs  parcel.rs  state.rs  user.rs
axum-api/tests/: auth_test.rs
k8s/: deployment.yaml  ingress.yaml  service.yaml  volume.yaml
k8s-tls/: LINKERD.yaml.txt  SECRET.yaml.txt  deployment.yaml  ingress.yaml  issuer.yaml  role.yaml  service.yaml
loadtests/: 20K_tls_iterations_test copy.js  20K_tls_iterations_test.js  20k_concurrent_test.js  20k_iterations_test.js  Dockerfile  complete_test.js  customer.js  driver.js  whole_test_time.js
spire/: role.yaml  service.yaml  spire-server.yaml
token-gen/: Cargo.toml  Dockerfile
token-gen/src/: main.rs
